--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<link rel = "stylesheet" href = "Design.css">
  	</head>
 	<body>
-		<img class = "logo" src = "components\msu.jpeg">
+		<img class = "logo" src = "components/msu.jpeg">
 		<div class = marksheet>
 		<table class = "table1" style="width:99.35%">
   			<tr>
    				<td colspan="3">
 					<div class = "first-row">
-					<img src = "\components\logo.png" id = "logo">
+					<img src = "components/logo.png" id = "logo">
 					<div class = "clg-name">
 						<h3 style="margin: 0.5em;"><i>மனோன்மணியம் சுந்தரனார் பல்கலைக்கழகம்</i></h3>
 						<h4 style="margin: 0.5em;"><b>MANONMANIAM SUNDARANAR UNIVERSITY</b></h4>
 						<p style="margin:0.5em;">TIRUNELVELI - 627012, TAMILNADU, INDIA</p>
 						<h5 style="margin:0.5em;"><b>STATEMENT OF MARKS WITH GRADE</b></h5>
 					</div>
-					<img src = "\components\seeni_profile.png" id = "profile">
+					<img src = "components/seeni_profile.png" id = "profile">
 					</div>
 					<pre style = "text-align:left;margin-bottom: 0px;font-size:15px; font-family: 'Times New Roman', Times, serif;"><b>SI.NO.:  DPPG 241000421    PROGRAMME:  M.Sc. CYBER SECURITY</b></pre>
 				</td>
@@ -274,6 +274,7 @@
 		<div class = "footer">
 			<pre style = "text-align:left;margin:5px;margin-left: 75px;font-size:15px; font-family: 'Times New Roman', Times, serif;"><B>SIGNATURE OF THE STUDENT</B></pre>
 			<pre style = "text-align:right;margin:5px;margin-left: 845px;font-size:15px; font-family: 'Times New Roman', Times, serif;"><B>CONTROLLER OF EXAMINATIONS</B></pre>
+		</div>
 		</div>
 	</body>
 </html>
